create flutter website

--- a/food_recommendation.ipynb
+++ b/food_recommendation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "c132cd20",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "id": "5ebf6b6a",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "id": "be25ccb9",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
        "0  To begin making the Thayir Semiya recipe, firs...  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "id": "c12fbdfa",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 6,
    "id": "0492aad4",
    "metadata": {},
    "outputs": [],
@@ -134,17 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 7,
    "id": "84feee83",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv(\"clean_data.csv\")"
+    "# data.to_csv(\"clean_data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 8,
    "id": "aa40b0d2",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "id": "52bbf64f",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 10,
    "id": "ee0034a0",
    "metadata": {},
    "outputs": [],
@@ -180,6 +180,27 @@
     "        mm.append(data.iloc[i[0]])  \n",
     "        df = pd.DataFrame(mm)\n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f6b13d21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4226, 10)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
    ]
   },
   {
